--- a/main.html
+++ b/main.html
@@ -510,7 +510,7 @@
   <div class="projects-list">
     <!-- Project 1 -->
     <article class="project-hover" aria-labelledby="p1">
-      <div class="project-img" style="background-image:url('project1.jpg')"></div>
+      <div class="project-img" style="Gemini_Generated_Image_ekyihqekyihqekyi.png"></div>
       <div class="project-overlay">
         <h3 id="p1">Autonomous Solar-Powered Rice Mixer & Dryer</h3>
         <p>Embedded systems · Sensors · Sustainable agriculture</p>
