Update project images in main.html

--- a/main.html
+++ b/main.html
@@ -520,7 +520,7 @@
 
     <!-- Project 2 -->
     <article class="project-hover" aria-labelledby="p2">
-      <div class="project-img" style="background-image:url('project2.jpg')"></div>
+      <div class="project-img" style="background-image:url('glasses.jpg')"></div>
       <div class="project-overlay">
         <h3 id="p2">Real-Time Sign Language Translation Eyeglasses (Proposal)</h3>
         <p>Computer vision · Edge ML · Assistive tech</p>
@@ -530,7 +530,7 @@
 
     <!-- Project 3 -->
     <article class="project-hover" aria-labelledby="p3">
-      <div class="project-img" style="background-image:url('project3.jpg')"></div>
+      <div class="project-img" style="background-image:url('bias.jpg')"></div>
       <div class="project-overlay">
         <h3 id="p3">Ethical AI Framework for Bias Detection (Capstone Idea)</h3>
         <p>AI ethics · Model evaluation</p>
