--- a/main.html
+++ b/main.html
@@ -540,7 +540,7 @@
 
     <!-- Project 4 -->
     <article class="project-hover" aria-labelledby="p4">
-      <div class="project-img" style="background-image:url('project4.jpg')"></div>
+      <div class="project-img" style="background-image:url('turbine.jpg')"></div>
       <div class="project-overlay">
         <h3 id="p4">Hydro Turbine Energy from Wastewater</h3>
         <p>Renewable energy · Research</p>
@@ -550,7 +550,7 @@
 
     <!-- Project 5 -->
     <article class="project-hover" aria-labelledby="p5">
-      <div class="project-img" style="background-image:url('project5.jpg')"></div>
+      <div class="project-img" style="background-image:url('pill.jpg')"></div>
       <div class="project-overlay">
         <h3 id="p5">Smart Medicine Pillbox</h3>
         <p>Healthcare · IoT</p>
@@ -560,7 +560,7 @@
 
     <!-- Project 6 -->
     <article class="project-hover" aria-labelledby="p6">
-      <div class="project-img" style="background-image:url('project6.jpg')"></div>
+      <div class="project-img" style="background-image:url('sumo.jpg')"></div>
       <div class="project-overlay">
         <h3 id="p6">Sumo Bot</h3>
         <p>Robotics · Competitions</p>
